Fix overflow on DIVS

--- a/style.css
+++ b/style.css
@@ -161,7 +161,3 @@ button:focus {
     background-color: black;
     border: 2px solid rgba(246, 235, 235, 0.938);
 }
-
-div { 
-   overflow: hidden;
-}
